Creacion de Ventas, Creacion del Principal uniendo la mayoria del Forms

--- a/Principal/Principal.csproj
+++ b/Principal/Principal.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Logica\Logica.csproj" />
   </ItemGroup>
 
